--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -404,7 +404,7 @@
                     <details id="Details-HeaderMenu-{{ forloop.index }}">
                       <summary class="header__menu-item list-menu__item link focus-inset">
                         <span {%- if link.child_active %} class="header__active-menu-item"{% endif %}>{{ link.title | escape }}</span>
-                        {% render 'icon-caret' %}
+                        {%- comment -%} {% render 'icon-caret' %} {%- endcomment -%}
                       </summary>
                       <ul id="HeaderMenu-MenuList-{{ forloop.index }}" class="header__submenu list-menu list-menu--disclosure gradient caption-large motion-reduce global-settings-popup" role="list" tabindex="-1">
                         {%- for childlink in link.links -%}
@@ -515,7 +515,7 @@
         </h1>
       {%- endif -%}
     {%- endif -%}
-
+    {%- comment -%}  
     <div class="header__icons">
       <details-modal class="header__search">
         <details>
@@ -623,6 +623,12 @@
           </div>
         {%- endif -%}
       </a>
+    </div>
+    {%- endcomment -%}
+    <div>
+      <div>ABOUT US</div>
+      <div>FOR PARTNERS</div>
+      <div>DELIVERY</div>
     </div>
   </header>
 </{% if section.settings.enable_sticky_header %}sticky-header{% else %}div{% endif %}>
